# trading-desk

./: .gitignore  .npmignore  CLAUDE.md  README.md  package.json  project-context.md  pyproject.toml  start_daemon.bat
.claude/: settings.json
.claude/skills/agent-axel/: SKILL.md  customize.toml
.claude/skills/agent-blaine/: SKILL.md  customize.toml
.claude/skills/agent-cass/: SKILL.md  customize.toml
.claude/skills/agent-frank/: SKILL.md  customize.toml
.claude/skills/agent-hugo/: SKILL.md  customize.toml
.claude/skills/agent-jaya/: SKILL.md  customize.toml
.claude/skills/agent-marco/: SKILL.md  customize.toml
.claude/skills/agent-mr-a/: SKILL.md  customize.toml
.claude/skills/agent-nadia/: SKILL.md  customize.toml
_bmad/: config.yaml  module-help.csv
_bmad-output/brainstorming/: brainstorming-session-2026-04-22-2208.md  brainstorming-session-2026-04-25-1016.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
daemon/: README.md  requirements.txt
daemon/config/: rules.yaml
daemon/src/: __init__.py  condition_engine.py  config_loader.py  main.py  market_data.py  order_router.py  position_manager.py  risk_monitor.py  state_machine.py  watcher.py
personas/: axel.md  blaine.md  cass.md  frank.md  hugo.md  jaya.md  marco.md  mr-a.md  nadia.md  nina.md  rex.md  sage.md  tara.md  vera.md
skills/tm-agent-quant/: customize.toml
skills/tm-dashboard/: SKILL.md
skills/tm-regime/: SKILL.md
skills/tm-setup/: SKILL.md
skills/tm-synthesis/: SKILL.md
(+86 files in other folders)
