[project]
name = "trading-desk"
version = "0.1.0"
description = "Interactive trading desk companion — Claude Code skills with 13 named agent personas"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "alpaca-py>=0.37.0",
    "numpy>=2.4.4",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
